--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,7 +29,7 @@
       POSTGRES_DB: uchet
       POSTGRES_USER: user
       POSTGRES_PASSWORD: pass
-      POSTGRES_LOG_CONNECTIONS: 'on'
+      POSTGRES_LOG_CONNECTIONS: on
     volumes:
       - pgdata:/var/lib/postgresql/data 
     ports:
