--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,6 +34,15 @@
     ports:
       - "5432:5432"
     
+    redis:
+      image: redis:7.2-alpine
+      container_name: redis
+      restart: always
+      ports:
+        - "6379:6379"
+      volumes:
+        - redis_data:/data
+      command: ["redis-server", "--appendonly", "yes"]
 
 volumes:
   pgdata:
